# support_agent

./: Dockerfile  README.md  docker-compose.yml  jota_sup_agent.md  jota_test_questions.json  jota_test_questions_normalized.md  main.py  pyproject.toml  pytest.ini  requirements.txt
assets/knowledge_base/: external_stub.md  jota_kb_restructured.md  jota_knowledge_base.md
assets/prompts/: atendimento_geral.md  criacao_conta.md  golpe_med.md  open_finance.md
scripts/: audit_rag_granular.py  build_rag_index.py  hierarchical_eval.py  security_dataset_runner.py  test_prompt_restructure_quality.py  test_rag_always_on.py  test_rag_always_on_case_mode.py  test_rag_dimension_mismatch_fix.py  update_dataset_with_rag_flags.py  verify_no_content_loss.py
src/support_agent/: cli.py
src/support_agent/agents/: __init__.py  atendimento_geral.py  base_agent.py  criacao_conta.py  golpe_med.py  open_finance.py
src/support_agent/cache/: cache_store.py  response_cache.py
src/support_agent/config/: paths.py  settings.py
src/support_agent/llm/: llm_manager.py
src/support_agent/memory/: __init__.py  memory_store.json  simple_memory_adapter.py  simple_session_memory.py
src/support_agent/orchestrator/: agent_orchestrator.py
src/support_agent/policy/: policy_engine.py
src/support_agent/prompts/: prompt_manager.py
tests/: README.md  jota_test_questions.md
tests/validation_scripts/: audit_model_integrity.py  validation_concurrency_parallel.py  validation_concurrency_real_traffic.py  validation_concurrency_threads.py
var/rag_index/: build_report.json  index_metadata.json
(+25 files in other folders)
