[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-agent"
version = "0.0.0"
description = "Jota Support Agent"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
jota-cli = "support_agent.cli:async_main"

[project.gui-scripts]
jota-api = "support_agent.app.api.fastapi_app:async_main"

[tool.pytest.ini_options]
pythonpath = ["src"]
